refactor: refactor DTO para montar objetos relacionados, além de get user by jwt